2010-10-09 Borut Razem <borut.razem AT siol.net>

	* support/cpp/auto-host_vc_in.h, support/cpp/libcpp/include/cpplib.h,
	  support/cpp/sdcpp-diagnostic.c:
	  fixed bug #3080422: #error not working as expected
	* src/SDCCmain.c, src/SDCCglobl.h:
	  --non-free and SDCC_NON_FREE changed to --use-non-free and
	  SDCC_USE_NON_FREE
	* doc/sdccman.lyx: documented --non-free
	* .version, sdcc.spec, doc/sdccman.lyx, doc/INSTALL.txt:
	  changed sdcc version to 3.0.0
	* src/SDCCmain.c: removed function readCfgFile()
	* support/scripts/repack_release.sh:
	  fixed typo

2010-10-08 Borut Razem <borut.razem AT siol.net>

	* sim/ucsim/s51.src/Makefile.in:
	  fixed bug 3082829: S51 is not installed in recent SDCC versions

2010-10-06 Borut Razem <borut.razem AT siol.net>

	* sdcc/configure, sdcc/configure.in:
	  show non-free search paths
	* support/scripts/sdcc_mingw32, support/scripts/sdcc_cygwin_mingw32:
	  define non_free_include_dir_suffix and non_free_lib_dir_suffix
	* support/scripts/sdcc.nsi:
	  remove non-free directory on uninstall
	* support/regression/ports/pic14/spec.mk,
	  support/regression/ports/pic16/spec.mk:
	  add --non-free option for pic* regression tests

2010-10-05 Borut Razem <borut.razem AT siol.net>

	* support/scripts/sdcc.nsi:
	  added non-free/lib/pic*/*.lib files to the win32 setup package,
	  remove non-free directory on uninstall

2010-10-04 Borut Razem <borut.razem AT siol.net>

	* src/SDCCmain.c: defined symbol SDCC_NON_FREE when --non-free command
	  line option is used
	* configure.in, configure, Makefile.in, device/lib/pic/configure.in,
	  device/lib/pic/configure, device/lib/pic/Makefile.in,
	  device/lib/pic/Makefile.common.in, device/lib/pic16/configure.ac,
	  device/lib/pic16/configure, device/lib/pic16/Makefile.am,
	  device/lib/pic16/Makefile.in,
	  device/lib/pic16/Makefile.common,
	  device/lib/pic16/libm/Makefile.in,
	  device/lib/pic16/debug/Makefile.in,
	  device/lib/pic16/libio/Makefile.in,
	  device/lib/pic16/startup/Makefile.in,